# finances

./: .env.example  .gitignore  CLAUDE.md  README.md  angular.json  docker-compose.yml  karma.conf.js  package-lock.json  package.json
.github/workflows/: deploy-api.yml
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  go.mod  go.sum
api/cmd/server/: main.go
api/internal/config/: config.go
api/internal/db/: db.go
api/internal/db/migrations/: 001_init.up.sql  003_cards.up.sql  004_cycle_modes.up.sql  005_soft_delete.up.sql
api/internal/handler/: budgets.go  cards.go  categories.go  dedupe.go  events.go  handler.go  middleware.go  stats.go  transactions.go  util.go
api/internal/model/: budget.go  card.go  category.go  model.go  transaction.go
api/internal/service/: budget.go  card.go  category.go  dedupe.go  service.go  stats.go  transaction.go
api/migrations/: 002_budgets.sql
api/src/: main.rs
api/tests/: budgets_test.go  dedupe_test.go
db/: schema.sql
n8n/: README.md  bank-expense-tracker.json
server/: db.json  routes.json
src/: index.html  styles.css
src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts
src/app/auth/: auth-guard-service.ts
src/app/model/: User.ts
src/app/routes/: index.ts
src/app/services/: auth.service.ts  user.service.ts
web/: .env.example  Dockerfile.dev  README.md  package-lock.json  package.json  vite.config.ts
web/src/: app.css  app.d.ts  app.html  d3-scale.d.ts  hooks.server.ts
web/src/lib/: api.ts  category.ts  cycle.ts  format.ts  types.ts
(+90 files in other folders)
