[package]
name = "finances-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
# remote-only: avoids the bundled SQLite C build, keeps the binary lean & musl-friendly.
# if a feature name errors on `cargo build`, check `cargo info libsql` and adjust.
libsql = { version = "0.6", default-features = false, features = ["remote"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
