[package]
name = "finances-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
# remote + tls: avoids the bundled SQLite C build (no `core`), keeps the binary
# lean & musl-friendly. `tls` (hyper-rustls) is required for libsql:// (https).
libsql = { version = "0.6", default-features = false, features = ["remote", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
